# RoboticSystemMezzina

./: PathPlanningVoroni.ipynb  README.md  cart.py  requirements.txt
ProgettoMezzina/: 1.AckermannSteering.py  2.PathPlanningVoroni.py  3.AckermannSteering+phidias.py  3.Strategy.py  3_Plot_v2.py  AckermannSteeringSimulation.py  PathPlanning.py  PathPlanningVoroni.ipynb  prova.py  tempCodeRunnerFile.py
ProgettoMezzina/OtherTests/: 3_Plot.py  3_Plot_v2.py  FinalVer.py  Fixed_Start_End.py  Single_Points_Voronoi_Diagrams.py  Single_Points_Voronoi_Diagrams_Start_End_Points.py
ahrs/: ahrs.py  ahrs_cube.py  comp_filter.py  gyro_cube.py  imu_driver.py
filtering/: first-order-filter.py  imu_driver.py  kalman.py  kalman_odometry.py  noise_example.py  noise_plot.py
gazebo/quadcopter/: runsim.sh
gazebo/simple_robot/: runsim.sh
gazebo/simple_robot/plugins/: CMakeLists.txt
gazebo/simple_robot/plugins/control/: control_plugin.cc  control_plugin.h  pid.cc  pid.h
gazebo/simple_robot/plugins/pose/: pose_plugin.cc  pose_plugin.h
gazebo/simple_robot/plugins/tester/: tester_plugin.cc  tester_plugin.h
prolog/: block-world.pl  blocks.pl  fact.pl  relatives.pl
tests/ackermann_2d/: test_ackermann.py  test_polar_ackermann.py  test_ramp_ackermann.py  test_speed_ackermann.py  test_virtual_robot_ackermann.py  test_virtual_robot_ackermann_2.py
tests/arm_1d/: test_arm_gui_plot.py  test_arm_plot.py  test_position_control_arm_gui.py  test_speed_control_arm_gui.py
tests/cart_1d/: data1.txt  test_cart.py  test_cart_gui.py  test_cart_gui_file.py  test_cart_gui_file_plot.py  (+13 more)
(+53 files in other folders)
